# gensoftworks

./: .gitignore  MEMORY-SIM1.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.claude/agents/: darius-gamedesigner.md  emre-worldbuilder.md  finn-producer.md  leo-qa.md  nami-narrativedesigner.md  tobi-techart.md  vera-conceptartist.md
blueprint/: 00-vision.md  01-architecture.md  02-memory-system.md  03-simulation-loop.md  04-conversation.md  05-creative-pipeline.md  06-visualization.md  07-logging.md  08-research-foundations.md
bullpen/: adressen.md  floorplan.md
docs/: capture.html  index.html  sprite-ref.html
export/: logbook-tag-001.md  logbook-tag-001.tex  logbook.md
frontend/: .gitignore  capture.html  index.html  package-lock.json  package.json  vite.config.js
logbook/: day-001.jsonl  day-002.jsonl  day-003.jsonl  day-005.jsonl
pinwall/: COMPLETED.md  ROADMAP.md
roster/: darius-engel.md  emre-yilmaz.md  finn-bergmann.md  leo-fischer.md  nami-okafor.md  tobi-richter.md  vera-kowalski.md
schemas/: artifact-header.md  day-index.json  day-summary.json  scene.json
scripts/: build-deploy.sh  build-manifest.py  build-viewer-data.py  capture-scenes.mjs  capture-thesis-screenshots.mjs  export-compact-batch.py  export-gdd.py  export-logbook.py  export-wbb.py  extract-transcripts.py  generate-images.py  migrate-to-day-index.py  repair-umlauts.py  results-day02-vera.json  test-scenes.json  validate-sim.py
simulation-1/: README.md
simulation-2/: briefing.md  game-master.md
simulation-2-test/: TESTLOG.md  briefing.md
state/: bulletin.json  world.json
templates/: document-compact.tex  document.tex  logbook-header.tex  logbook.tex
tools/: generate_map.py
(+1166 files in other folders)
