[project]
name = "studio-arcana"
version = "0.1.0"
description = "AI Creative Studio Simulator — multi-agent generative system for collaborative worldbuilding and game design"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",          # for embeddings only
    "chromadb>=0.5.0",
    "pygame>=2.6.0",
    "pytmx>=3.32",
    "numpy>=1.26.0",
    "pyyaml>=6.0",
    "rich>=13.0",              # terminal logging
    "jinja2>=3.1",             # log export templates
    "weasyprint>=62.0",        # PDF export
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]
fal = [
    "fal-client>=0.5.0",      # image generation
]

[project.scripts]
studio = "workshop.main:run"
export-log = "workshop.export:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
