[project]
name = "studio-arcana"
version = "0.1.0"
description = "AI Creative Studio Simulator — multi-agent generative system for collaborative worldbuilding and game design"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.1",             # log export templates
    "weasyprint>=62.0",        # PDF export
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]
fal = [
    "fal-client>=0.5.0",      # image generation
]

[project.scripts]
export-log = "workshop.export:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
